--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,7 +2,7 @@
 
 // 🎨 Paleta de colores
 $primary-color: #000054;
-$primary-color2: #07027d;
+$primary-color2: #018abd;
 $primary-color3: #0d04a6;
 $primary-color4: #1407cf;
 
