--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -4,15 +4,15 @@
 header {
     background-color: $white;
     border-bottom: rgba($secondary-color, 0.2) solid 3px;
-    padding: 24px;
+    // padding: 22px;
     .contentLogo{
         .logo {
-            font-size: 3rem;
+            font-size: 2.4rem;
             line-height: 1;
             background-color: $primary-color;
             border-radius: 10px;
             color: $white;
-            padding: 16px;
+            padding: 14px;
         }
         .nombre{
             font-size: 2.25rem;
@@ -22,8 +22,8 @@ header {
 
     nav { 
         padding: 16px;
-        font-size: 1.4rem;
-        line-height: 1.4;     
+        // font-size: 1.4rem;
+        // line-height: 1.4;     
         font-weight: 500;
         a {
             text-decoration: none;
@@ -49,23 +49,4 @@ header {
             border-radius: 6px;
         }
     }
-// .buttons {
-//     display: flex;
-//     gap: 10px;
-
-//     button {
-//     padding: 8px 16px;
-//     border-radius: 5px;
-//     border: 1px solid #4f46e5;
-//     background: transparent;
-//     color: #4f46e5;
-//     cursor: pointer;
-//     transition: all 0.3s;
-
-//     &:hover {
-//         background: #4f46e5;
-//         color: white;
-//     }
-//     }
-// }
 }
