--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -11,7 +11,10 @@ $secondary-color2: #03121d;
 $secondary-color3: #041b2c;
 $secondary-color4: #05243a;
 
+$naranaj: #FCA622;
+
 $white: #f5f5f5;
+$white2:rgb(255, 255, 255);
 $text-color: #333;
 
 // 📏 Tamaños de fuente
