--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -12,6 +12,7 @@ $secondary-color3: #041b2c;
 $secondary-color4: #05243a;
 
 $naranaj: #FCA622;
+$naranaOscuro: #da9028;
 
 $white: #f5f5f5;
 $white2:rgb(255, 255, 255);
