--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,8 @@
 // variables.scss
-@import "./themes.scss";
+// @import "./_themes.scss";
 // 🎨 Paleta de colores
 // $primary-color: #000054;
-$primary-color: var(--primary-color);
+$primary-color: #000054;
 $primary-color2: #018abd;
 $primary-color3: #0d04a6;
 $primary-color4: #1407cf;
