--- a/src/pages/CV/CV.scss
+++ b/src/pages/CV/CV.scss
@@ -16,7 +16,7 @@
             background-color: color-mix(in srgb, var(--naranaj) 30%, transparent);
             border-radius: 4px;
             svg{
-                color: var(--naranaj)
+                color: var(--naranaj);
             }
         }
         .gradient-text {
