--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -18,14 +18,22 @@
 }
 
 .tema-oscuro {
-    --primary-color: #1c960c;
-    --primary-color2: #1c960c;
-    --colorDos: #1c960c;
-    --secondary-color: #ffffff;
-    --text-color: #e0e0e0;
-    --bg-color: #000000;
-    --white: #2c2a2a;
+    --primary-color: #000054;
+    --primary-color2: #018abd;
+    --primary-color3: #0d04a6;
+    --primary-color4: #1407cf;
 
+    --secondary-color: #000000;
+    --secondary-color2: #03121d;
+    --secondary-color3: #041b2c;
+    --secondary-color4: #05243a;
+
+    --naranaj: #FCA622;
+    --naranaOscuro: #da9028;
+
+    --white: #f5f5f5;
+    --white2:rgb(255, 255, 255);
+    --text-color: #333;
 }
 
 .tema-violeta {
