--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,22 +2,22 @@
 // @import "./_themes.scss";
 // 🎨 Paleta de colores
 // $primary-color: #000054;
-$primary-color: #000054;
-$primary-color2: #018abd;
-$primary-color3: #0d04a6;
-$primary-color4: #1407cf;
+// $primary-color: #000054;
+// $primary-color2: #018abd;
+// $primary-color3: #0d04a6;
+// $primary-color4: #1407cf;
 
-$secondary-color: #000000;
-$secondary-color2: #03121d;
-$secondary-color3: #041b2c;
-$secondary-color4: #05243a;
+// $secondary-color: #000000;
+// $secondary-color2: #03121d;
+// $secondary-color3: #041b2c;
+// $secondary-color4: #05243a;
 
-$naranaj: #FCA622;
-$naranaOscuro: #da9028;
+// $naranaj: #FCA622;
+// $naranaOscuro: #da9028;
 
-$white: #f5f5f5;
-$white2:rgb(255, 255, 255);
-$text-color: #333;
+// $white: #f5f5f5;
+// $white2:rgb(255, 255, 255);
+// $text-color: #333;
 
 // 📏 Tamaños de fuente
 $font-small: 14px;
