--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,7 @@ html, body, #root {
   /* background-image: url('../assets/imagenes/uno.jpg'); */
   /* background-image: url('../assets/imagenes/dos.jpg'); */
   /* background-image: url('../assets/imagenes/tres.jpg'); */
-  background-image: url('../assets/imagenes/cuatro.jpg');
+  /* background-image: url('../assets/imagenes/cuatro.jpg'); */
   background-size: cover;
   background-position: center;
 
