--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -31,7 +31,7 @@
     --naranaj: #FCA622;
     --naranaOscuro: #da9028;
 
-    --white: #f5f5f5;
+    --white: #131212;
     --white2:rgb(255, 255, 255);
     --text-color: #333;
 }
