--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -18,22 +18,22 @@
 }
 
 .tema-oscuro {
-    --primary-color: #000054;
-    --primary-color2: #018abd;
+    --primary-color: #ffffff;
+    --primary-color2: #0546a8;
     --primary-color3: #0d04a6;
     --primary-color4: #1407cf;
 
-    --secondary-color: #000000;
-    --secondary-color2: #03121d;
+    --secondary-color: #949494;
+    --secondary-color2: #ffffff;
     --secondary-color3: #041b2c;
     --secondary-color4: #05243a;
 
-    --naranaj: #FCA622;
-    --naranaOscuro: #da9028;
+    --naranaj: #226efc;
+    --naranaOscuro: #163a70;
 
-    --white: #131212;
-    --white2:rgb(255, 255, 255);
-    --text-color: #333;
+    --white: #0c0c0c;
+    --white2:#171717;
+    --text-color: #c2c2c2;
 }
 
 .tema-violeta {
