--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -14,6 +14,7 @@ header {
         }
         .nombre{
             line-height: 1;
+            color: var(--secondary-color);
         }
     }
 
@@ -25,6 +26,7 @@ header {
             display: flex;
             align-items: center;
             justify-content: center;
+            color: var(--secondary-color2);
             svg{
                 margin-left: 10px;
             }
@@ -33,6 +35,7 @@ header {
             }
         }
         .submenu{
+            color: var(--secondary-color2);
             button{
                 cursor: pointer;
                 &:hover {
