--- a/src/pages/Contacto/popupContacto.scss
+++ b/src/pages/Contacto/popupContacto.scss
@@ -24,11 +24,15 @@
             background-clip: text;
             color: transparent;
         }
+        .iconito{
+            color: var(--secondary-color);
+        }
         .form-input, .form-textarea {
             border: 2px solid var(--white2);
             border-radius: 8px;
             transition: all 0.3s;
             background-color: var(--white);
+            color: var(--secondary-color);
             border-left: solid 6px var(--naranaj);
             &:focus {
                 outline: none;
