--- a/src/pages/Contacto/popupContacto.scss
+++ b/src/pages/Contacto/popupContacto.scss
@@ -45,7 +45,7 @@
         }        
         .submit-button {
             background: linear-gradient(90deg, var(--primary-color), var(--primary-color2));
-            color: var(--white2);
+            color: var(--secondary-color3);
             border: none;
             border-radius: 8px;
             cursor: pointer;
