--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -6,7 +6,7 @@
 
     --secondary-color: #000000;
     --secondary-color2: #03121d;
-    --secondary-color3: #041b2c;
+    --secondary-color3: #dbe1e6;
     --secondary-color4: #05243a;
 
     --naranaj: #FCA622;
@@ -37,9 +37,20 @@
 }
 
 .tema-violeta {
-    --primary-color: #6a0dad;
-    --colorDos: #1c960c;
-    --secondary-color: #ece0ff;
-    --text-color: #2a003f;
-    --bg-color: #f7f0ff;
+    --primary-color: #4e0749;
+    --primary-color2: #7d0e7d;
+    --primary-color3: #7d0e7d;
+    --primary-color4: #1f0015;
+
+    --secondary-color: #e0dbdb;
+    --secondary-color2: #d4d4d4;
+    --secondary-color3: #c5b5d6;
+    --secondary-color4: #d7d7e4;
+
+    --naranaj: #fc22f1;
+    --naranaOscuro: #bc28da;
+
+    --white: #1f0015;
+    --white2: #351135;
+    --text-color: #ffffff;
 }
