--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -54,3 +54,22 @@
     --white2: #351135;
     --text-color: #ffffff;
 }
+
+.tema-rojo {
+    --primary-color: #74000de6;
+    --primary-color2: #8d0904;
+    --primary-color3: #b11208;
+    --primary-color4: #1f0015;
+
+    --secondary-color: #351e1e;
+    --secondary-color2: #201e1e;
+    --secondary-color3: #c5b5d6;
+    --secondary-color4: #d7d7e4;
+
+    --naranaj: #de4f33;
+    --naranaOscuro: #eb7424;
+
+    --white: #f5f5f5;
+    --white2: #ffffff;
+    --text-color: #141111;
+}
