mood verde y inciio de traduccion

--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -73,3 +73,22 @@
     --white2: #ffffff;
     --text-color: #141111;
 }
+
+.tema-camila {
+    --primary-color: #142910;
+    --primary-color2: #0f1f0c;
+    --primary-color3: #2fb108;
+    --primary-color4: #1f0015;
+
+    --secondary-color: #e9f0e8;
+    --secondary-color2: #f7f3f3;
+    --secondary-color3: #c5b5d6;
+    --secondary-color4: #d7d7e4;
+
+    --naranaj: #4b8b3e;
+    --naranaOscuro: #2a8a16;
+
+    --white: #2d5d24;
+    --white2: #193015;
+    --text-color: #dce2d8;
+}
