--- a/src/styles/_themes.scss
+++ b/src/styles/_themes.scss
@@ -45,7 +45,7 @@
     --secondary-color: #e0dbdb;
     --secondary-color2: #d4d4d4;
     --secondary-color3: #c5b5d6;
-    --secondary-color4: #d7d7e4;
+    --secondary-color4: #6e4279;
 
     --naranaj: #fc22f1;
     --naranaOscuro: #bc28da;
@@ -64,7 +64,7 @@
     --secondary-color: #351e1e;
     --secondary-color2: #201e1e;
     --secondary-color3: #c5b5d6;
-    --secondary-color4: #d7d7e4;
+    --secondary-color4: #dd7514;
 
     --naranaj: #de4f33;
     --naranaOscuro: #eb7424;
@@ -83,7 +83,7 @@
     --secondary-color: #e9f0e8;
     --secondary-color2: #f7f3f3;
     --secondary-color3: #c5b5d6;
-    --secondary-color4: #d7d7e4;
+    --secondary-color4: #1c4e24;
 
     --naranaj: #4b8b3e;
     --naranaOscuro: #2a8a16;
